# Fractalmaker

./: CMakeLists.txt  LICENSE  README.md
scenes/1/: TestFractal.fractal  regionmakertestoutput.regionvar  variableVAR.varinput
src/Circle/: CircleFractal.fractal  SavedExpr  regionmakertestoutput.regionvar
src/makers/: fractalmaker.h
src/samples/: Mandelbrot.fractal  Mandelbrot.regionvar  TestFractal.fractal
src/test/: colorimagetest.cpp  exprchooser.cpp  exprtest.cpp  fractalgeneratortest.cpp  fractaltest.cpp  regionmakertest.cpp  regionvariabletest.cpp  variabletest.cpp
src/types/: CMakeLists.txt  color.cpp  color.hpp  colorimage.cpp  colorimage.hpp  expr.cpp  expr.hpp  fractal.cpp  fractal.hpp  fractalgenerator.cpp  fractalgenerator.hpp  fractalrunner.hpp  image.cpp  image.hpp  region.cpp  region.hpp  regionmaker.cpp  regionmaker.hpp  regionvariable.cpp  regionvariable.hpp  variable.cpp  variable.hpp
src/utils/: CMakeLists.txt  FlagParser.cpp  FlagParser.hpp  transformpixeltocomplex.cpp  transformpixeltocomplex.hpp
